google map api setup done

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,6 +6,9 @@ plugins {
 }
 
 android {
+    defaultConfig {
+        minSdkVersion 20
+    }
     namespace = "com.example.location_screen"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
