Basic Strucrure of App

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 android {
     defaultConfig {
-        minSdkVersion 20
+        minSdkVersion flutter.minSdkVersion
     }
     namespace = "com.example.location_screen"
     compileSdk = flutter.compileSdkVersion
