Route and UI improvement

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>We need your location to show it on the map.</string>
+
+
+
     <key>GOOGLE_MAPS_API_KEY</key>
     <string>AIzaSyDM80KzkiLqRMqHE4lEYl-2jGapbssxpBE</string>
 	<key>CFBundleDevelopmentRegion</key>
