--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geolocator: ^9.0.2
   google_maps_flutter: ^2.2.7
 
   # The following adds the Cupertino Icons font to your application.
