--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   geolocator: ^9.0.2
+  http: ^1.2.2
   google_maps_flutter: ^2.2.7
+  flutter_map_marker_cluster: ^1.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
